--- a/rollplay.html
+++ b/rollplay.html
@@ -42,24 +42,29 @@
 			<section>
 				<div class="flexMe">
 					<span>
-					<h3>Make a Roll!</h3>
-					<div id="rollControls">
-						<div>
-							<p>
-								<label for="rollSelect">Roll using</label>
-								<select id="rollSelect" name="rollSelect"></select>
-							</p>
-						</div>
-						<div>
+						<h3>Make a Roll!</h3>
+						<div id="rollControls">
 							<div>
-								<button id="rollExecute" type="button">Roll!</button>	
+								<p>
+									<label for="rollSelect">Roll using</label>
+									<select id="rollSelect" name="rollSelect"></select>
+								</p>
 							</div>
 							<div>
-								<button id="attackExecute" type="button">Attack!</button>
-								<select id="rollTarget"></select>
+								<div>
+									<button id="rollExecute" type="button">Roll!</button>	
+								</div>
+								<div>
+									<button id="attackExecute" type="button">Attack!</button>
+									<select id="rollTarget"></select>
+								</div>
 							</div>
 						</div>
-					</div>
+					</span>
+					<span>
+						<h3>Summoning</h3>
+						<div id="summonControls">
+						</div>
 					</span>
 					<div>
 						<h3>Enemies</h3>
