--- a/rollplay.html
+++ b/rollplay.html
@@ -56,7 +56,7 @@
 								</div>
 								<div>
 									<button id="attackExecute" type="button">Attack!</button>
-									<select id="rollTarget"></select>
+									<select id="rollTarget" npc-target></select>
 								</div>
 							</div>
 						</div>
