Relabeled all pages to 'Rollplay' rather than 'Roleplay'

--- a/charsheet.html
+++ b/charsheet.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Roleplay - Character Sheet</title>
+	<title>ESO Rollplay - Character Sheet</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 	<link rel="stylesheet" href="./assets/css/style.css" />
@@ -14,7 +14,7 @@
 		<button type="button" id="buttonHelp">Help</button>
 	</div>
 	<aside><a id="referLink" href="rollplay.html">Use your character! →</a></aside>
-	<h1>ESO Roleplay - Character Sheet</h1>
+	<h1>ESO Rollplay - Character Sheet</h1>
 	<section>
 		<form>
 			<label for="charName">Name:</label>
