--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Roleplay</title>
+	<title>ESO Rollplay</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 	<link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-	<h1>Welcome to ESO Roleplay!</h1>
+	<h1>ESO Rollplay - Player Portal</h1>
 	<section>
 		<p>
 			These pages are to facillitate a player run roleplaying system for The Elder Scrolls Online.
