--- a/gmscreen.html
+++ b/gmscreen.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Roleplay - GM's Screen</title>
+	<title>ESO Rollplay - GM's Screen</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/gmscreen.css" />
 </head>
 <body>
-	<h1>ESO Roleplay - GM's Screen</h1>
+	<h1>ESO Rollplay - GM's Screen</h1>
 	<div id="main">
 		<section id="encounterInfo">
 			<h2>Current Session</h2>
