--- a/namegenerator.html
+++ b/namegenerator.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Roleplay - Name Generator</title>
+	<title>ESO Rollplay - Name Generator</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/namegenerator.css" />
 </head>
 <body>
-	<h1>ESO Roleplay - Name Generator</h1>
+	<h1>ESO Rollplay - Name Generator</h1>
 	<section>
 		<form>
 			<div>
