--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>ESO Roleplay - Character Profiles</title>
+		<title>ESO Rollplay - Character Profiles</title>
 		<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 		<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 		<link rel="stylesheet" href="./assets/css/style.css" />
