--- a/rollplay.html
+++ b/rollplay.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Roleplay - Rollplaying!</title>
+	<title>ESO Rollplay - Rollplaying!</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/rollplay.css" />
 </head>
 <body>
-	<h1>ESO Roleplay - Rollplaying!</h1>
+	<h1>ESO Rollplay - Rollplaying!</h1>
 	<div id="main">
 		<section id="charInfo">
 			<h2>Your Character</h2>
