Players and NPCs can be removed from sessions by the GM.

--- a/gmscreen.html
+++ b/gmscreen.html
@@ -95,7 +95,7 @@
 				<h3>Make a Roll</h3>
 				<div>
 					<div class="flexMe">
-						<select id="rollNPC"></select>
+						<select id="rollNPC" npc-list></select>
 						<input type="text" id="rollComment" placeholder='Comment' maxlength="100"></input>
 					</div>
 					<div>
