Code cleanup/documentation.

--- a/rollplay.html
+++ b/rollplay.html
@@ -92,15 +92,15 @@
 		</div>
 		<div id="rollModal">
 			<h3>Roll Needed!</h3>
-			<p id="forceRollText"></p>
-			<p id="forceRollGMComment"></p>
+			<p id="dieRollText"></p>
+			<p id="dieRollGMComment"></p>
 			<form>
-				<input type="text" id="forceRollComment" placeholder='Comment' maxlength="100"></input>
-				<button id="makeForceRoll" type="submit">Roll!</button>
-				<button id="cancelForceRoll" type="button">Cancel</button>
+				<input type="text" id="dieRollComment" placeholder='Comment' maxlength="100"></input>
+				<button id="makeDieRoll" type="submit">Roll!</button>
+				<button id="cancelDieRoll" type="button">Cancel</button>
 			</form>
-			<div id="forceRollPanel"></div>
-			<button id="forceRollContinue">Ok</button>
+			<div id="dieRollPanel"></div>
+			<button id="dieRollContinue">Ok</button>
 		</div>
 		<div id="profileModal">
 			<iframe></iframe>
