--- a/namegenerator.html
+++ b/namegenerator.html
@@ -10,8 +10,9 @@
 	<link rel="stylesheet" href="./assets/css/namegenerator.css" />
 </head>
 <body>
-	<h1>ESO Rollplay - Name Generator</h1>
-	<section>
+	<div id="loading"></div>
+	<h1 class="hideMe">ESO Rollplay - Name Generator</h1>
+	<section class="hideMe">
 		<form>
 			<div>
 				<label for="race">Race:</label>
@@ -34,7 +35,7 @@
 			</div>
 		</form>
 	</section>
-	<section>
+	<section class="hideMe">
 		<h2>Results</h2>
 		<ol id="results"></ol>
 	</section>
