--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,9 @@
 		<link rel="stylesheet" href="./assets/css/profile.css" />
 	</head>
 <body>
-	<h1>Character Profiles</h1>
-	<section>
+	<div id="loading"></div>
+	<h1 class="hideMe">ESO Rollplay - Character Profiles</h1>
+	<section id="main" class="hideMe">
 		<div>
 			<select id="characters"></select>
 			<div id="printout" title="Double click to copy character sheet."></div>
