--- a/index.html
+++ b/index.html
@@ -6,20 +6,33 @@
 	<title>ESO Rollplay</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
+	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
 	<link rel="stylesheet" href="./assets/css/style.css" />
+	<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
 </head>
 <body>
-	<h1>ESO Rollplay - Player Portal</h1>
-	<section>
-		<p>
-			These pages are to facillitate a player run roleplaying system for The Elder Scrolls Online.
-		</p>
-		<ul>
-			<li><a href="charsheet.html">Character Sheet</a></li>
-			<li><a href="rollplay.html">Rollplay</a></li>
-			<li><a href="profile.html">Browse Characters</a></li>
-			<li><a href="namegenerator.html">Generate Lore Friendly Names</a></li>
-		</ul>
-	</section>
+	<h1>ESO Rollplay - Welcome!</h1>
+	<div id="auth-panel">
+		<div id="loading"></div>
+	</div>
+	<div id="modalBG">
+		<div id="errorModal">
+			<h3>Error</h3>
+			<p id="errorText"></p>
+			<button id="errorButton" type="button">Ok</button>
+		</div>
+		<div id="confirmModal">
+			<h3>Confirm</h3>
+			<p id="confirmText"></p>
+			<button id="confirmOk" type="button">Ok</button>
+			<button id="confirmCancel" type="button">Cancel</button>
+		</div>
+	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-auth.js"></script>
+	<script src="./assets/js/firebase.js"></script>
+	<script src="./assets/js/auth.js"></script>
 </body>
 </html>
