--- a/rollplay.html
+++ b/rollplay.html
@@ -3,26 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ESO Rollplay - Rollplaying!</title>
+	<title>ESO Rollplay - Session</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic.min.css">
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/rollplay.css" />
 </head>
 <body>
-	<h1>ESO Rollplay - Rollplaying!</h1>
-	<div id="main">
+	<nav>
+		<h1 title="Return to Dashboard">ESO Rollplay</h1>
+		<div id="logout">
+			<span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
+		</div>
+	</nav>
+	<div id="loading"></div>
+	<div id="main" class="hideMe">
 		<section id="charInfo">
+			<div id="sessionControls">
+				<button type="button" id="loadSession" disabled="true">Load Session</button>
+			</div>
 			<h2>Your Character</h2>
-			<form name="charInfo">
-				<label for="charName">Name:</label>
-				<input type="text" name="charName" maxlength="25"></input>
-				<label for="charPlayer">@</label>
-				<input type="text" name="charPlayer" placeholder="Account Name" maxlength="25"></input>
-				<div class="buttonHolder">
-					<button id="loadChar" type="submit">Load</button>
-				</div>
-			</form>
 			<div id="printout" title="Double click to copy character sheet."></div>
 			<div id="charStatus">
 				<h3>Character Info</h3>
@@ -84,6 +85,12 @@
 			<p id="errorText"></p>
 			<button id="errorButton" type="button">Ok</button>
 		</div>
+		<div id="confirmModal">
+			<h3>Confirm</h3>
+			<p id="confirmText"></p>
+			<button id="confirmOk" type="button">Ok</button>
+			<button id="confirmCancel" type="button">Cancel</button>
+		</div>
 		<div id="sessionModal">
 			<h3>Session Selection</h3>
 			<p>Choose the GM of the session you will be joining:</p>
@@ -110,6 +117,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-auth.js"></script>
 	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/esorplib.js"></script>
 	<script src="./assets/js/rollplay.js"></script>
