--- a/namegenerator.html
+++ b/namegenerator.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 	<div id="loading"></div>
-	<h1 class="hideMe">ESO Rollplay - Name Generator</h1>
+	<nav class="hideMe">
+		<h1>ESO Rollplay</h1>
+	</nav>
+	<h2 class="hideMe">Name Generator</h2>
 	<section class="hideMe">
 		<form>
 			<div>
