Improved call to action.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="main">
 		<div id="call-to-action">
 			<h2>Welcome to Rollplay!</h2>
-			<p>Rollplay is a dice rolling supplement for roleplayers in <a href="https://www.elderscrollsonline.com/" target="_blank">The Elder Scrolls Online</a>.  The system closely mimics tabletop play, where a game master controls the action for other players.  Players can create their own characters and join in on their computer or phone.</p>
+			<p>Rollplay is a dice rolling supplement for roleplayers in <a href="https://www.elderscrollsonline.com/" target="_blank">The Elder Scrolls Online</a>.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!</p>
 			<div class="slideshow">
 				<div class="slide waiting" style="background: url('./assets/images/slideshow/CharSheet.jpg')"></div>
 				<div class="slide waiting"></div>
