SEO for index/login page.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Rollplay is a dice rolling supplement for roleplayers in The Elder Scrolls Online.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!">
 	<title>ESO Rollplay</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
@@ -17,7 +18,7 @@
 	<div id="main">
 		<div id="call-to-action">
 			<h2>Welcome to Rollplay!</h2>
-			<p>Rollplay is a dice rolling supplement for roleplayers in <a href="https://www.elderscrollsonline.com/" target="_blank">The Elder Scrolls Online</a>.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!</p>
+			<p>Rollplay is a dice rolling supplement for roleplayers in <a href="https://www.elderscrollsonline.com/" target="_blank" rel="noopener">The Elder Scrolls Online</a>.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!</p>
 			<div class="slideshow">
 				<div class="slide waiting" style="background: url('./assets/images/slideshow/CharSheet.jpg')"></div>
 				<div class="slide waiting"></div>
