--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<link rel="stylesheet" href="./assets/css/login.css" />
 </head>
 <body>
-	<h1>ESO Rollplay</h1>
+	<nav>
+		<h1 class="nopointer">ESO Rollplay</h1>
+	</nav>
 	<div id="mainHolder">
 	<div id="main">
 		<div id="call-to-action">
