Fixed settings tooltip.

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 	<nav>
 		<h1 class="nopointer">ESO Rollplay</h1>
 		<div id="userOptions">
-			<span class="oi" data-glyph="wrench" title="Account Options - Coming Soon™" aria-hidden="true"></span>
+			<span class="oi" data-glyph="wrench" title="Account Options" aria-hidden="true"></span>
 		</div>
 		<div id="logout">
 			<span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
