Player Handbook now integrated into site in wiki-like format.

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,11 +13,18 @@
 <body>
 	<nav>
 		<h1 class="nopointer">ESO Rollplay</h1>
-		<div id="userOptions">
-			<span class="oi" data-glyph="wrench" title="Account Options" aria-hidden="true"></span>
-		</div>
-		<div id="logout">
-			<span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
+		<div class="toolbar">
+			<div id="logout">
+				<span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
+			</div>
+			<div id="handbook">
+				<a href="./handbook.html" target="_blank">
+					<span class="oi" data-glyph="book" title="Handbook" aria-hidden="true"></span>
+				</a>
+			</div>
+			<div id="userOptions">
+				<span class="oi" data-glyph="wrench" title="Account Options" aria-hidden="true"></span>
+			</div>
 		</div>
 	</nav>
 	<section>
