--- a/handbook.html
+++ b/handbook.html
@@ -46,6 +46,17 @@
 						<a href="./docs/credits.html" target="handbook-page">Credits</a>
 					</li>
 				</ul>
+				<ul>
+					<li>
+						<h4>Guides</h4>
+					</li>
+					<li>
+						<a href="./docs/guide-player.html" target="handbook-page">Player Guide</a>
+					</li>
+					<li>
+						<a href="./docs/guide-gm.html" target="handbook-page">GM Guide</a>
+					</li>
+				</ul>
 			</nav>
 			<iframe name="handbook-page" src="./docs/index.html"></iframe>
 		</div>
