--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>ESO Rollplay</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic.min.css">
 	<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
 	<link rel="stylesheet" href="./assets/css/style.css" />
 	<link rel="stylesheet" href="./assets/css/login.css" />
@@ -14,6 +15,13 @@
 <body>
 	<nav>
 		<h1 class="nopointer">ESO Rollplay</h1>
+		<div class="toolbar">
+			<div id="handbook">
+				<a href="./handbook.html" target="_blank">
+					<span class="oi" data-glyph="book" title="Handbook" aria-hidden="true"></span>
+				</a>
+			</div>
+		</div>
 	</nav>
 	<div id="mainHolder">
 	<div id="main">
