--- a/charsheet.html
+++ b/charsheet.html
@@ -16,8 +16,15 @@
 			<button type="button" id="buttonHelp">Help</button>
 		</div>
 		<h1 title="Return to Dashboard">ESO Rollplay</h1>
-		<div id="logout">
-			<span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
+		<div class="toolbar">
+			<div id="logout">
+				<span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
+			</div>
+			<div id="handbook">
+				<a href="./handbook.html" target="_blank">
+					<span class="oi" data-glyph="book" title="Handbook" aria-hidden="true"></span>
+				</a>
+			</div>
 		</div>
 	</nav>
 	<div id="loading"></div>
