--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,9 @@
 	</head>
 <body>
 	<div id="loading"></div>
-	<h1 class="hideMe">ESO Rollplay - Character Profiles</h1>
+	<nav class="hideMe">
+		<h1>ESO Rollplay</h1>
+	</nav>
 	<section id="main" class="hideMe">
 		<div>
 			<select id="characters"></select>
