Added Player Guide and GM Guide.

--- a/charsheet.html
+++ b/charsheet.html
@@ -100,7 +100,7 @@
 			<h2>Building Your Character</h2>
 			<div>
 				<h3>Name/Race/Etc.</h3>
-				<p>You must specify a character name and account name to save your character.  Race, sex, and supernatural type have an effect on stats, so be sure to select the appropriate values.</p>
+				<p>You must specify a character name to save your character.  Race, sex, and supernatural type have an effect on stats, so be sure to select the appropriate values.</p>
 				<h3>Attributes</h3>
 				<p>You should begin by choosing your attribute scores. This is a straight 1-for-1 point buy.</p>
 				<h3>Skills</h3>
