Added more information for new users.

--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,15 @@
 			<div id="loading"></div>
 			<div id="characterCenter" class="hideMe">
 				<div id="newUserPrompt" class="hideMe">
-					<h3>Get Started!</h3>
+					<h3>Welcome aboard!</h3>
+					<p>
+						Please refer to the
+						<a href="./handbook.html" target="_blank">
+							<span class="oi" data-glyph="book" title="Handbook" aria-hidden="true"></span>
+							Handbook
+						</a>
+						for more information on getting started.  Or dive right in and make your first character!
+					</p>
 					<button type="button" name="createCharacter">Make a Character</button>
 				</div>
 				<div id="charListHolder" class="hideMe">
