Added Discord link to dashboard page.

--- a/dashboard.html
+++ b/dashboard.html
@@ -64,6 +64,9 @@
 			</div>
 		</div>
 	</section>
+	<footer>
+		Join the discussion on<a href="https://discord.gg/3Bugsvp" target="_blank"><img src="./assets/images/Discord-Logo+Wordmark-White.png" alt="Discord logo" /></a>
+	</footer>
 	<div id="modalBG">
 		<div id="errorModal">
 			<h3>Error</h3>
