GMs can add NPCs by template.

--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,7 @@
 		</div>
 	</section>
 	<footer>
-		Join the discussion on<a href="https://discord.gg/3Bugsvp" target="_blank"><img src="./assets/images/Discord-Logo+Wordmark-White.png" alt="Discord logo" /></a>
+		Join the discussion:<a href="https://discord.gg/3Bugsvp" target="_blank"><img src="./assets/images/Discord-Logo+Wordmark-White.png" alt="Discord logo" /></a>
 	</footer>
 	<div id="modalBG">
 		<div id="errorModal">
