Added audio alert and screen flash events.

--- a/dashboard.html
+++ b/dashboard.html
@@ -46,7 +46,7 @@
 				</div>
 				<div id="charListHolder" class="hideMe">
 					<ol id="characterList">
-						<li>Test Item</li>
+						<li></li>
 					</ol>
 				</div>
 				<div id="characterCommands" class="hideMe">
@@ -81,6 +81,12 @@
 		</div>
 		<div id="settingsModal">
 			<h3>Account Settings</h3>
+			<div class="settingGroup">
+				<div>
+					<label for="optVolume">Alert Volume</label>
+					<input type="range" id="optVolume" min="0" max="1" step="0.1"></input>
+				</div>
+			</div>
 			<div class="settingGroup">
 				<div>
 					<input type="checkbox" id="optGM" />
