Added links for Name Generator and Character Browser to login page for easy access.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 				<div class="slide waiting"></div>
 				<div class="caption"><p></p></div>
 			</div>
+			<div id="other-links">
+				<h3>Quick Links</h3>
+				<ul>
+					<li><a href="./namegenerator.html">Name Generator</a></li>
+					<li><a href="./profile.html">View Characters</a></li>
+				</ul>
+			</div>
 		</div>
 		<div id="auth-panel">
 			<div id="loading"></div>
