--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Rollplay is a dice rolling supplement for roleplayers in The Elder Scrolls Online.  The system closely mimics tabletop play, where a game master controls the action for other players.  Join the fun from your computer, tablet, or phone!">
+	<meta property="og:image" content="./assets/images/logo.png"/>
 	<title>ESO Rollplay</title>
 	<link rel="icon" href="./assets/images/logo.png" type="image/png" />
 	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/u001" type="text/css"/>
