Corrected bugs - Misses alert other players, attacking with attributes causes calculation to fail.

--- a/dashboard.html
+++ b/dashboard.html
@@ -50,7 +50,7 @@
 					</ol>
 				</div>
 				<div id="characterCommands" class="hideMe">
-					<div id="printout"></div>
+					<div id="printout">Please select a character.</div>
 					<div id="characterButtons">
 						<button type="button" id="playCharacter" disabled="true">Play!</button>
 						<button type="button" id="editCharacter" disabled="true">Edit</button>
