Character description now supports markdown.  Backend changes for further profile enhancements.

--- a/charsheet.html
+++ b/charsheet.html
@@ -90,7 +90,7 @@
 			<div id="printout" title="Double click to copy character sheet."></div>
 		</div>
 		<div>
-			<h2>Character Description</h2>
+			<h2>Short Description</h2>
 			<textarea type="textarea" name="charBackground" maxlength="1000" rows="10"></textarea>
 		</div>
 	</div>
