--- a/namegenerator.html
+++ b/namegenerator.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="loading"></div>
 	<nav class="hideMe">
-		<h1>ESO Rollplay</h1>
+		<h1><a href="/">ESO Rollplay</a></h1>
 	</nav>
 	<h2 class="hideMe">Name Generator</h2>
 	<section class="hideMe">
