Added Enemies field to character sheet.

--- a/charsheet.html
+++ b/charsheet.html
@@ -91,7 +91,7 @@
 		<div id="shortProfile">
 			<h2>Character Profile</h2>
 			<h3>Short Description</h3>
-			<textarea type="textarea" name="charBackground" maxlength="1000" rows="10" placeholder="This is what players will see if they click your character during a Rollplay session."></textarea>
+			<textarea type="textarea" name="charBackground" maxlength="1000" rows="10" placeholder="This is what players will see if they click your character during a Rollplay session.  This is a good place to mention physical characteristics and publicly known information about your character!"></textarea>
 			<h3>General Information</h3>
 			<div id="profileGeneral">
 				<div id="imageInfo">
@@ -148,6 +148,10 @@
 						<div class="flexMe">
 							<label for="alliances">Alliances</label>
 							<input type="text" name="alliances" maxlength="1000" placeholder="Any groups you are friendly to."></input>
+						</div>
+						<div class="flexMe">
+							<label for="enemies">Enemies</label>
+							<input type="text" name="enemies" maxlength="1000" placeholder="Any groups or people you are NOT friendly to."></input>
 						</div>
 						<div class="flexMe">
 							<label for="relationships">Relationships</label>
