--- a/rollplay.html
+++ b/rollplay.html
@@ -127,6 +127,7 @@
 	<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-auth.js"></script>
 	<script src="./assets/js/firebase.js"></script>
 	<script src="./assets/js/esorplib.js"></script>
+	<script src="./assets/js/eventsystem.js"></script>
 	<script src="./assets/js/rollplay.js"></script>
 </body>
 </html>
