Added link to ESO addon to Quick Links section of CTA.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<ul>
 					<li><a href="./namegenerator.html">Name Generator</a></li>
 					<li><a href="./profile.html">View Characters</a></li>
+					<li><a href="https://www.esoui.com/downloads/info2871-RollplayIntegration.html" target="_blank">ESO Addon</a></li>
 				</ul>
 			</div>
 		</div>
