Added link to addon at the bottom of the Dashboard.

--- a/dashboard.html
+++ b/dashboard.html
@@ -67,7 +67,8 @@
 		</div>
 	</section>
 	<footer>
-		Join the discussion:<a href="https://discord.gg/3Bugsvp" target="_blank"><img src="./assets/images/Discord-Logo+Wordmark-White.png" alt="Discord logo" /></a>
+		<div><strong>Join the discussion:</strong><a class="buttonLink" href="https://discord.gg/3Bugsvp" target="_blank"><img src="./assets/images/Discord-Logo+Wordmark-White.png" alt="Discord logo" /></a></div>
+		<div><strong>Get the addon:</strong> <a href="https://www.esoui.com/downloads/info2871-RollplayIntegration.html" target="_blank">ESOUI.com</a> <span class="smolbreak"><i>or</i> in the Roleplay category in <a href="https://minion.mmoui.com/" target="_blank">Minion</a>!</span></div>
 	</footer>
 	<div id="modalBG">
 		<div id="errorModal">
